added some translations for the help files

--- a/lang/en.json
+++ b/lang/en.json
@@ -21,6 +21,7 @@
     "Available in": "Available in",
     "Before deleting your account, please download any data or information that you wish to retain.": "Before deleting your account, please download any data or information that you wish to retain.",
     "Calendar": "Calendar",
+    "calendar": "the calendar",
     "Calendar Creation": "Calendar Creation",
     "Calendar, Schedule and Results": "Calendar, Schedule and Results",
     "Cancel": "Cancel",
@@ -100,6 +101,7 @@
     "Games Won": "Games Won",
     "Games schedule": "Games schedule",
     "General overview": "General overview",
+    "Get help for": "Get help for",
     "Google Play App": "Google Play App",
     "Has been opened": "Has been opened",
     "Hide comment": "Hide comment",
@@ -168,6 +170,7 @@
     "Profile": "Profile",
     "Profile Information": "Profile Information",
     "Profile related": "Profile related",
+    "ranking": "the ranking",
     "Register": "Register",
     "Remember me": "Remember me",
     "Remove this administrator": "Remove this administrator",
@@ -189,6 +192,7 @@
     "Score changes log file": "Score changes log file",
     "Score updated": "Score updated",
     "Scoreboard": "Scoreboard",
+    "scoreboard": "the scoreboard",
     "Scoreboard explained": "Scoreboard explained",
     "Scores": "Scores",
     "Season": "Season",
@@ -213,6 +217,7 @@
     "Team": "Team",
     "Team details": "Team details",
     "Teams": "Teams",
+    "teams": "teams",
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.",
     "The Calendar": "The Calendar",
     "The Individual Ranking": "The Individual Ranking",
