--- a/lang/nl.json
+++ b/lang/nl.json
@@ -21,6 +21,7 @@
     "Available in": "Beschikbaar in",
     "Before deleting your account, please download any data or information that you wish to retain.": "Before deleting your account, please download any data or information that you wish to retain.",
     "Calendar": "Kalender",
+    "calendar": "de kalender",
     "Calendar Creation": "Kalender aanmaken",
     "Calendar, Schedule and Results": "Kalender, Dagschema en resultaten",
     "Cancel": "Annuleren",
@@ -100,6 +101,7 @@
     "Games Won": "Gewonnen wedstrijden",
     "Games schedule": "Spelschema",
     "General overview": "Algemeen overzicht",
+    "Get help for": "Krijg hulp voor",
     "Google Play App": "Google Play App",
     "Has been opened": "Is geopend",
     "Hide comment": "Verberg commentaar",
@@ -168,6 +170,7 @@
     "Profile": "Profiel",
     "Profile Information": "Profielinformatie",
     "Profile related": "Profielgerelateerd",
+    "ranking": "de rangschikking",
     "Register": "Registreren",
     "Remember me": "Onthoud mij",
     "Remove this administrator": "Verwijder deze administrator",
@@ -189,6 +192,7 @@
     "Score changes log file": "Logbestand scores",
     "Score updated": "Score bijgewerkt",
     "Scoreboard": "Scorebord",
+    "scoreboard": "het scorebord",
     "Scoreboard explained": "Scorebord uitgelegd",
     "Scores": "Scores",
     "Season": "Seizoen",
@@ -213,6 +217,7 @@
     "Team": "Team",
     "Team details": "Team details",
     "Teams": "Teams",
+    "teams": "teams",
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "Bedankt voor je registratie! Controleer je e-mailadres door op de link te klikken die we je zojuist hebben gemaild. Heb je de e-mail niet ontvangen? Dan sturen we graag een nieuwe.",
     "The Calendar": "De Kalender",
     "The Individual Ranking": "De Individuele Ranglijst",
