added some extra translations to the json files

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -21,7 +21,6 @@
     "Available in": "Beschikbaar in",
     "Before deleting your account, please download any data or information that you wish to retain.": "Before deleting your account, please download any data or information that you wish to retain.",
     "Calendar": "Kalender",
-    "calendar": "de kalender",
     "Calendar Creation": "Kalender aanmaken",
     "Calendar, Schedule and Results": "Kalender, Dagschema en resultaten",
     "Cancel": "Annuleren",
@@ -71,7 +70,6 @@
     "Delete": "Wis",
     "Delete Account": "Account verwijderen",
     "Deleted": "Gewist",
-    "Designed for the Puerto Galera Billiard League": "Gemaakt voor de Puerto Galera Billiard League",
     "Detailed schedules": "Score details",
     "Details of": "Details van",
     "Details of the venue": "Details van de bar",
@@ -170,7 +168,6 @@
     "Profile": "Profiel",
     "Profile Information": "Profielinformatie",
     "Profile related": "Profielgerelateerd",
-    "ranking": "de rangschikking",
     "Register": "Registreren",
     "Remember me": "Onthoud mij",
     "Remove this administrator": "Verwijder deze administrator",
@@ -192,7 +189,6 @@
     "Score changes log file": "Logbestand scores",
     "Score updated": "Score bijgewerkt",
     "Scoreboard": "Scorebord",
-    "scoreboard": "het scorebord",
     "Scoreboard explained": "Scorebord uitgelegd",
     "Scores": "Scores",
     "Season": "Seizoen",
@@ -217,7 +213,6 @@
     "Team": "Team",
     "Team details": "Team details",
     "Teams": "Teams",
-    "teams": "teams",
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "Bedankt voor je registratie! Controleer je e-mailadres door op de link te klikken die we je zojuist hebben gemaild. Heb je de e-mail niet ontvangen? Dan sturen we graag een nieuwe.",
     "The Calendar": "De Kalender",
     "The Individual Ranking": "De Individuele Ranglijst",
@@ -286,6 +281,7 @@
     "auth.password": "Gelieve uw wachtwoord in te voegen",
     "back to post": "terug naar de post",
     "back to the forum": "terug naar het forum",
+    "calendar": "de kalender",
     "can only be changed by administrators": "kan alleen door een administrator aangepast worden",
     "click for details": "click voor details",
     "click on a name to see the game details": "klik op de naam om de speeldetails te zien",
@@ -322,11 +318,15 @@
     "please create some": "creëer enkele spelen",
     "posted by": "gepubliceerd door",
     "pushed to the top for important messages": "publiceer naar de top als een belangrijk bericht",
+    "ranking": "de rangschikking",
     "ready to start": "klaar om te beginnen",
     "results": "resultaten",
+    "scoreboard": "het scorebord",
     "select": "selecteer",
     "select date": "selecteer een datum",
     "singles": "singles",
+    "teams": "teams",
+    "the day scores overview": "the day scores overview",
     "to": "naar",
     "update team and players": "team en spelers aanpassen",
     "week": "week"
