--- a/lang/en.json
+++ b/lang/en.json
@@ -21,7 +21,6 @@
     "Available in": "Available in",
     "Before deleting your account, please download any data or information that you wish to retain.": "Before deleting your account, please download any data or information that you wish to retain.",
     "Calendar": "Calendar",
-    "calendar": "the calendar",
     "Calendar Creation": "Calendar Creation",
     "Calendar, Schedule and Results": "Calendar, Schedule and Results",
     "Cancel": "Cancel",
@@ -71,7 +70,6 @@
     "Delete": "Delete",
     "Delete Account": "Delete Account",
     "Deleted": "Deleted",
-    "Designed for the Puerto Galera Billiard League": "Designed for the Puerto Galera Billiard League",
     "Detailed schedules": "Detailed schedules",
     "Details of": "Details of",
     "Details of the venue": "Details of the venue",
@@ -170,7 +168,6 @@
     "Profile": "Profile",
     "Profile Information": "Profile Information",
     "Profile related": "Profile related",
-    "ranking": "the ranking",
     "Register": "Register",
     "Remember me": "Remember me",
     "Remove this administrator": "Remove this administrator",
@@ -192,7 +189,6 @@
     "Score changes log file": "Score changes log file",
     "Score updated": "Score updated",
     "Scoreboard": "Scoreboard",
-    "scoreboard": "the scoreboard",
     "Scoreboard explained": "Scoreboard explained",
     "Scores": "Scores",
     "Season": "Season",
@@ -217,7 +213,6 @@
     "Team": "Team",
     "Team details": "Team details",
     "Teams": "Teams",
-    "teams": "teams",
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.",
     "The Calendar": "The Calendar",
     "The Individual Ranking": "The Individual Ranking",
@@ -286,6 +281,7 @@
     "auth.password": "auth.password",
     "back to post": "back to post",
     "back to the forum": "back to the forum",
+    "calendar": "the calendar",
     "can only be changed by administrators": "can only be changed by administrators",
     "click for details": "click for details",
     "click on a name to see the game details": "click on a name to see the game details",
@@ -322,11 +318,15 @@
     "please create some": "please create some",
     "posted by": "posted by",
     "pushed to the top for important messages": "pushed to the top for important messages",
+    "ranking": "the ranking",
     "ready to start": "ready to start",
     "results": "results",
+    "scoreboard": "the scoreboard",
     "select": "select",
     "select date": "select date",
     "singles": "singles",
+    "teams": "teams",
+    "the day scores overview": "the day scores overview",
     "to": "to",
     "update team and players": "update team and players",
     "week": "week"
