Update language files for Dutch translations

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -1,7 +1,7 @@
 {
     "A bar is on your name": "A bar is op uw naam",
-    "A new verification link has been sent to the email address you provided during registration.": "Er is een nieuwe verificatielink verzonden naar het e-mailadres dat je tijdens de registratie hebt opgegeven.",
-    "A new verification link has been sent to your email address.": "Er is een nieuwe verificatielink naar je e-mailadres gestuurd.",
+    "A new verification link has been sent to the email address you provided during registration.": "Er is een nieuwe verificatielink verstuurd naar het e-mailadres dat je ingegeven hebt tijdens de registratie.",
+    "A new verification link has been sent to your email address.": "Er is een nieuwe verificatielink naar je e-mailadres verstuurd.",
     "A word of explanation": "Een woordje uitleg",
     "ADMIN": "BEHEERDER",
     "Actions": "Acties",
@@ -34,7 +34,7 @@
     "Choose a day games format": "Kies een dagwedstrijdformaat",
     "Claim an open user account": "Claim een open user account",
     "Claim your account": "Claim uw account",
-    "Click here to re-send the verification email.": "Klik hier om de verificatiemail opnieuw te verzenden.",
+    "Click here to re-send the verification email.": "Klik hier om de verificatie e-mail opnieuw te versturen.",
     "Competition Results": "Competitie Resultaten",
     "Confirm": "Bevestigen",
     "Confirm Password": "Bevestig wachtwoord",
@@ -56,7 +56,7 @@
     "Current team": "Current team",
     "Daily games lost": "Wedstrijden gewonnen",
     "Daily games won": "Wedstrijden verloren",
-    "Dashboard": "Dashbord",
+    "Dashboard": "Dashboard",
     "Date": "Datum",
     "Date overlaps": "Datum overlapt",
     "Dates not played yet": "Nog niet gespeelde datums",
@@ -83,13 +83,13 @@
     "Edit the venue's details": "Wijzig de details",
     "Edit this player": "Wijzig deze speler",
     "Edit this venue": "Wijzig deze info",
-    "Email": "E-mail",
+    "Email": "E-mailadres",
     "Email the password reset link": "Stuur de link voor wachtwoordherstel per e-mail",
     "Ensure your account is using a secure password. The current password is 'secret' and should be filled in.": "Zorg ervoor dat je account een veilig wachtwoord gebruikt. Het huidige wachtwoord is 'secret' en moet worden ingevuld.",
     "Final Score": "Eindscore",
     "Final score is": "Eindscore is",
     "Finals? Semi? Other?": "Finals? Semi? Ander?",
-    "Forbidden": "Verboden",
+    "Forbidden": "Geen toegang",
     "Forgot your password?": "Wachtwoord vergeten?",
     "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to create a new password.": "Wachtwoord vergeten? Geen probleem. Laat ons je e-mailadres weten en we sturen je een link om je wachtwoord te resetten.",
     "Forum": "Forum",
@@ -119,8 +119,6 @@
     "List of admins": "Lijst van beheerders",
     "Live update": "Live update",
     "Locked": "Locked",
-    "Log Out": "Afmelden",
-    "Log in": "Aanmelden",
     "Log in or register": "Aanmelden of registreren",
     "Managed by": "Beheerd door",
     "Max Playing Days": "Max Gespeelde Dagen",
@@ -151,7 +149,7 @@
     "Overview of all users": "Overzicht gebruikers",
     "Overview of our PG billiard rules": "Overzicht van onze PG billiard regelmenten",
     "Overview of players": "Overzicht van alle spelers",
-    "Page Expired": "Pagina verlopen",
+    "Page Expired": "Pagina niet meer geldig",
     "Participating Players": "Deelnemende Spelers",
     "Participating Teams": "Deelnemende teams",
     "Password": "Wachtwoord",
@@ -169,14 +167,14 @@
     "Profile Information": "Profielinformatie",
     "Profile related": "Profielgerelateerd",
     "Register": "Registreren",
-    "Remember me": "Onthoud mij",
+    "Remember me": "Onthouden",
     "Remove this administrator": "Verwijder deze administrator",
     "Remove this player": "Verwijder deze speler",
     "Remove this team": "Verwijder dit team",
     "Remove this user from the chat? All related messages will be deleted too": "Verban deze gebruiker? Alle gelinkte berichten worden ook verwijderd.",
-    "Resend Verification Email": "Verificatiemail opnieuw verzenden",
+    "Resend Verification Email": "Verificatie-e-mail opnieuw versturen",
     "Reserve": "Gereserveerd",
-    "Reset Password": "Wachtwoord resetten",
+    "Reset Password": "Wachtwoord herstellen",
     "Reset the schedule": "Rooster resetten",
     "Reviewed": "Herbekeken",
     "Room created": "Kamer gecreëerd",
@@ -201,19 +199,19 @@
     "Send": "Verstuur",
     "Send emails to players": "Stuur e-mails naar spelers",
     "Server Error": "Serverfout",
-    "Service Unavailable": "Dienst niet beschikbaar",
+    "Service Unavailable": "Website onbeschikbaar",
     "Show all": "Toon alles",
     "Show only the ###median### most active players": "Toon enkel de ###median### meest actieve spelers",
     "Show the list of ALL players": "Toon een overzicht van ALLE spelers",
     "Show/Hide password": "Toon/verberg paswoord",
-    "Showing": "Weergeven",
+    "Showing": "Toont",
     "Special date": "speciale dag",
     "Started by": "Gestart door",
     "Sticky": "Sticky",
     "Team": "Team",
     "Team details": "Team details",
     "Teams": "Teams",
-    "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "Bedankt voor je registratie! Controleer je e-mailadres door op de link te klikken die we je zojuist hebben gemaild. Heb je de e-mail niet ontvangen? Dan sturen we graag een nieuwe.",
+    "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "Bedankt voor je registratie! Wil je voordat je begint je e-mailadres verifiëren door op de link te klikken die we je zojuist via mail hebben verstuurd? Als je de e-mail niet hebt ontvangen, sturen we je graag een nieuwe.",
     "The Calendar": "De Kalender",
     "The Individual Ranking": "De Individuele Ranglijst",
     "The Original": "Het origineel",
@@ -233,19 +231,19 @@
     "There are no games yet": "Er zijn nog geen wedstrijden",
     "There are no players added to the team yet!": "Er zijn nog geen spelers aan het team toegevoegd!",
     "This Season seems finished, missing (semi) finals": "Dit Seizoen lijkt over, zijn er missende (semi) finales",
-    "This is a secure area of the application. Please confirm your password before continuing.": "Dit is een beveiligd gedeelte van de applicatie. Bevestig je wachtwoord om verder te gaan.",
+    "This is a secure area of the application. Please confirm your password before continuing.": "Dit is een beveiligd gedeelte van de applicatie. Bevestig je wachtwoord voordat je doorgaat.",
     "This is an open source project build on Laravel, Livewire and Tailwind": "Dit is een open source project gebouwd op Laravel, Livewire en Tailwind",
     "Title": "Titel",
     "Toggle to make a captain": "Maak kapitein",
     "Toggle to make a regular player": "Maak speler",
-    "Too Many Requests": "Te veel verzoeken",
+    "Too Many Requests": "Te veel serververzoeken",
     "Total Games": "Wedstrijden",
     "Total games lost": "Wedstrijden verloren",
     "Total games won": "Wedstrijden gewonnen",
-    "Unauthorized": "Ongeautoriseerd",
+    "Unauthorized": "Onbevoegd",
     "Upcoming schedules": "Aankomende roosters",
     "Update": "Bijwerken",
-    "Update Password": "Wachtwoord bijwerken",
+    "Update Password": "Wachtwoord aanpassen",
     "Update Season structure": "Seizoensstructuur bijwerken",
     "Update post": "Bericht bijwerken",
     "Update the Calendar": "Kalender bijwerken",
@@ -253,10 +251,9 @@
     "Update the current Calendar": "Huidige kalender bijwerken",
     "Update the scores of the": "Scores bijwerken van de",
     "Update your Chat Room": "Werk deze Chat ruimte bij",
-    "Update your account's profile information and email address.": "Werk de profielinformatie en het e-mailadres van je account bij.",
+    "Update your account's profile information and email address.": "Pas je profiel informatie en e-mailadres aan.",
     "Updated": "Bijgewerkt",
     "User created and added to your team! A reminder has been sent with the login info.": "Gebruiker aangemaakt en toegevoegd aan je team! Een herinnering met inloggegevens is verzonden.",
-    "Venue": "Locatie",
     "Visit": "Bezoek",
     "Visitor": "Bezoeker",
     "Visitors": "Bezoekers",
@@ -327,7 +324,7 @@
     "singles": "singles",
     "teams": "teams",
     "the day scores overview": "the day scores overview",
-    "to": "naar",
+    "to": "tot",
     "update team and players": "team en spelers aanpassen",
     "week": "week"
 }
