Update translation for "Home Team" in Filipino language file

--- a/lang/tl.json
+++ b/lang/tl.json
@@ -105,7 +105,7 @@
     "Hide comment": "Itago ang komento",
     "Hide some": "Itago ang ilan",
     "Home": "Tahanan",
-    "Home Team": "Koponan ng Bahay",
+    "Home Team": "Bahay",
     "If you don't have the person's email, it is auto generated": "Kung wala kang email ng tao, ito ay awtomatikong ginawa",
     "Individual Games Won": "Indibidwal na Mga Larong Nanalo",
     "Individual Games and Results": "Indibidwal na Mga Laro at Resulta",
